# ittsy

./: AGENTS.md  Cargo.toml  README.md  RELEASE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: ittsy.icns
docs/: ROADMAP.md
scripts/: package-linux.sh  package-macos.sh  verify-macos-app.sh
site/: CNAME  downloads.js  index.html  robots.txt  site.webmanifest  sitemap.xml  style.css
src/: main.rs  terminal.rs
