[package]
name = "ittsy"
version = "0.1.0"
edition = "2024"
description = "A tiny, corner-friendly bash terminal"
license = "MIT"
repository = "https://github.com/resistdesign/ittsy"

[dependencies]
arboard = { version = "3.6.1", default-features = false }
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
minifb = { version = "0.28.0", default-features = false }
portable-pty = "0.9.0"
vt100 = "0.16.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
