[package]
name = "ittsy"
version = "0.3.0"
edition = "2024"
description = "A tiny, corner-friendly terminal"
license = "MIT"
repository = "https://github.com/resistdesign/ittsy"

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "glow", "x11"] }
portable-pty = "0.9.0"
vt100 = "0.16.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
